--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.49.0",
-    "dotenv": "^16.4.5",
-    "@types/node": "^22.10.1"
+    "@types/node": "^22.10.1",
+    "dotenv": "^16.6.1"
   }
 }
